# agentbreaker

./: .env.example  .gitignore  LICENSE  README.md  agentbreaker.py  control_plane.py  metadata_index.py  platforms.yaml  pyproject.toml  requirements.txt  target_config.yaml
.github/workflows/: validate.yml
agentbreaker/: __init__.py  __main__.py  arc_taxonomy.py  artifact_paths.py  attack.py  attack_generator.py  attack_planner.py  campaign.py  campaign_engine.py  cli.py  config_schema.py  control_plane.py  ctf_state.py  db.py  domain_helpers.py  license.py  llm_error_utils.py  response_analysis.py  seed_manager.py  target.py  taxonomy_loader.py
control_plane_static/: control_plane.css  control_plane.js  live_updates.js
control_plane_templates/: page_shell.html
disclosures/: README.md
docs/: program.md  results-showcase.md
findings/novel/: README.md
findings/partial/: ATK-00003.yaml  ATK-00004.yaml  ATK-00312.yaml  README.md
findings/success/: ATK-00001.yaml  ATK-00002.yaml  ATK-00004.yaml  ATK-00005.yaml  ATK-00009.yaml  ATK-00010.yaml  ATK-00011.yaml  ATK-00013.yaml  ATK-00014.yaml  ATK-00016.yaml  ATK-00017.yaml  ATK-00019.yaml  ATK-00025.yaml  ATK-00026.yaml  ATK-00027.yaml  ATK-00039.yaml  ATK-00042.yaml  ATK-00044.yaml  ATK-00046.yaml  ATK-00052.yaml  (+162 more)
frontend/: components.json  package-lock.json  package.json  vite.config.ts
providers/: README.md  agent_target.py.example  browser_chatbot.py.example  promptairlines_ctf.py  prompttrace.py  resistance_ctf.py
taxonomy/: agentbreaker_taxonomy.yaml  arc_pi_taxonomy.json  mitre_atlas_mapping.yaml
(+53 files in other folders)
